syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.energy";
option java_outer_classname = "EnergyServiceImpl";

package energy;

service EnergyService {

	rpc switchDevices (DevicesOffRequest) returns (DevicesOffResponse) {}; //unary RPC 

	rpc switchLightsOn (LightsOnRequest) returns (LightsResponse) {};//unary RPC 
	
	rpc lightIntensity (stream LightAdjustRequest) returns (LightsResponse) {};//client stream RPC missing
}

message DevicesOffRequest {
	bool deviceOff = 1;
}

message DevicesOffResponse {
	bool deviceOff = 1;
}

message Lights{
	int32 lightId = 1;
	string lightStatus = 2;
	int32 adjust = 3;
}

message LightsOnRequest {
	int32 lightId = 1;
}

message LightsResponse {
	Lights light = 1;
}

message LightAdjustRequest {
	int32 lightId = 1;
	int32 adjust = 2;
}
